@@ -81,13 +81,6 @@ class tx_kickstarter_section_cm extends tx_kickstarter_sectionbase {
 		return $content;
 	}
 
-
-
-
-
-
-
-
 	/**
 	 * Renders the extension PHP code; this was
 	 *
@@ -244,9 +237,6 @@ class tx_kickstarter_section_cm extends tx_kickstarter_sectionbase {
 				',$content,'
 			}
 		');
-
-
-#		$this->printPre($content);
 
 		$this->addFileToFileArray(
 			$filename,
