@@ -80,13 +80,6 @@ class tx_kickstarter_section_modulefunction extends tx_kickstarter_sectionbase {
 		return $content;
 	}
 
-
-
-
-
-
-
-
 	/**
 	 * Renders the extension PHP code; this was
 	 *
